configured database.yml for production

--- a/config/database.yml
+++ b/config/database.yml
@@ -101,8 +101,12 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: ArticlesSearch_production
+#   username: ArticlesSearch
+#   password: <%= ENV["ARTICLESSEARCH_DATABASE_PASSWORD"] %>
+
 production:
   <<: *default
-  database: ArticlesSearch_production
-  username: ArticlesSearch
-  password: <%= ENV["ARTICLESSEARCH_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
